syntax = "proto3";

package proto;
option go_package="./proto";

import "google/protobuf/empty.proto";

// Connection Identifier
message ConnectionParams {
    bytes uuid = 1;
}

// Run Executable
message RunExecutableOptions {
    string command = 1;
    repeated string args = 2;
}

message RunExecutableInput {
    RunExecutableOptions options = 1;
    bytes stdin = 2;
}

message RunExecutableResult {
    int32 returnCode = 1;
    bytes stdout = 2;
    bytes stderr = 3;
}

// Upload/Download File
message FileChunk {
    string path = 1;
    bytes chunk = 2;
}

// HashFile

service Command {
    rpc GetConnectionParams(google.protobuf.Empty) returns (ConnectionParams) {}
    rpc RunExecutable(stream RunExecutableInput) returns (stream RunExecutableResult) {}
    rpc FileUpload(stream FileChunk) returns (google.protobuf.Empty) {}
    rpc FileDownload(FileChunk) returns (stream FileChunk) {}
}